v0.15.0/_sources/generated/statsmodels.tsa.ardl.ARDLResults.rst.txt
statsmodels.tsa.ardl.ARDLResults
================================

.. currentmodule:: statsmodels.tsa.ardl

.. autoclass:: ARDLResults
   :exclude-members: append,apply,conf_int,cov_params,diagnostic_summary,f_test,forecast,get_prediction,initialize,load,normalized_cov_params,plot_diagnostics,plot_predict,predict,remove_data,save,scale,sigma2,summary,t_test,t_test_pairwise,test_heteroskedasticity,test_normality,test_serial_correlation,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~ARDLResults.append
      ~ARDLResults.apply
      ~ARDLResults.conf_int
      ~ARDLResults.cov_params
      ~ARDLResults.diagnostic_summary
      ~ARDLResults.f_test
      ~ARDLResults.forecast
      ~ARDLResults.get_prediction
      ~ARDLResults.initialize
      ~ARDLResults.load
      ~ARDLResults.normalized_cov_params
      ~ARDLResults.plot_diagnostics
      ~ARDLResults.plot_predict
      ~ARDLResults.predict
      ~ARDLResults.remove_data
      ~ARDLResults.save
      ~ARDLResults.scale
      ~ARDLResults.sigma2
      ~ARDLResults.summary
      ~ARDLResults.t_test
      ~ARDLResults.t_test_pairwise
      ~ARDLResults.test_heteroskedasticity
      ~ARDLResults.test_normality
      ~ARDLResults.test_serial_correlation
      ~ARDLResults.wald_test
      ~ARDLResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~ARDLResults.aic
      ~ARDLResults.aicc
      ~ARDLResults.ar_lags
      ~ARDLResults.arfreq
      ~ARDLResults.bic
      ~ARDLResults.bse
      ~ARDLResults.centered_tss
      ~ARDLResults.df_model
      ~ARDLResults.df_resid
      ~ARDLResults.ess
      ~ARDLResults.fittedvalues
      ~ARDLResults.fpe
      ~ARDLResults.hqic
      ~ARDLResults.llf
      ~ARDLResults.nobs
      ~ARDLResults.params
      ~ARDLResults.pvalues
      ~ARDLResults.resid
      ~ARDLResults.roots
      ~ARDLResults.rsquared
      ~ARDLResults.ssr
      ~ARDLResults.tvalues
      ~ARDLResults.uncentered_tss
      ~ARDLResults.use_t
   
   
   